자잘한 오류 수정2(ing)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="id_description">아이디 입력 필드</string>
     <string name="password_description">비밀번호 입력 필드</string>
     <string name="complete">완료</string>
+    <string name="register">회원가입</string>
 </resources>
